--- a/reputationradar.umbrellasupport.co.uk/.gitignore
+++ b/reputationradar.umbrellasupport.co.uk/.gitignore
@@ -14,6 +14,10 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
 
+/.idea
+/.idea/
+.idea/*
+
 # IDE Files
 #-------------------------
 /nbproject/
